# python-smith-game

./: .editorconfig  README.md  __main__.py  flake.nix  pyproject.toml  setup.cfg
backup/: __init__.py  market.py
player_agents/: random_agent.py  work_agent.py
smithg/: cli.py
smithg/datatypes/: commands.py
smithg/engine/: __init__.py  engine.py  market.py
src/smithg/: __init__.py  agents.py  cli.py  datatypes.py
src/smithg/agents/: __init__.py  agents.py  commands.py
src/smithg/agents/examples/: __init__.py  random_agent.py
src/smithg/datatypes/: __init__.py  commands.py  events.py
src/smithg/engine/: __init__.py  engine.py  events.py  market.py
tests/: test_agents.py  test_engine.py
