[metadata]
name = smithg
version = 0.1.0
author = Wanja Chresta
description = Python smith game is a smithing themed coding game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wchresta/python-smith-game
project_urls =
    Bug Tracker = https://github.com/wchresta/python-smith-game/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    smithg = smithg.cli:main
